Fixed text clipping issue

--- a/base.css
+++ b/base.css
@@ -151,7 +151,7 @@ a{
 .description-container{
     /* padding: 1em; */
     overflow: hidden;
-    height: 100px;
+    height: 99px;
     width: 15em;
     text-overflow: ellipsis;
 }
@@ -233,11 +233,25 @@ h4{
 
     .books{
         width: 100%;
-        margin-bottom: 5em;
+        margin: 0;
+        margin-bottom: 4em;
     }
 
     .popular img{
         height: 250px;
+    }
+
+    .description-container{
+        width: 100%;
+        /* height: 70px; */
+        text-overflow: ellipsis;
+    }
+
+}
+
+@media(max-width: 400px){
+    .buy-this{
+        margin-top: 1em;
     }
 }
 
